istio/config/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restricted-access
  namespace: indexforge
spec:
  podSelector:
    matchLabels:
      app: indexforge
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: authorized-service
        - namespaceSelector:
            matchLabels:
              name: istio-system
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8200
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: authorized-destination
        - namespaceSelector:
            matchLabels:
              name: istio-system
      ports:
        - protocol: TCP
          port: 8200
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 8080
